add various proxy tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["jman"]
 
 [dependencies]
-tokio = "*"
+tokio = "0.1.6"
 encoding = "*"
-tokio-io = "*"
+tokio-io = "0.1.6"
